# Scene-Serializer

./: .gitmodules  README.md
Schema/: file_example.json  schema.json
cpp/Serializer/: Serializer.sln
cpp/Serializer/Sandbox/: CMakeLists.txt  Sandbox.vcxproj  dupa.json  file_example.json  main.cpp
cpp/Serializer/Serializer/: CMakeLists.txt  Serializable.h  Serializer.h  Serializer.vcxproj  Serializer.vcxproj.filters
cpp/Serializer/Serializer/Models/: Bezier.h  BezierC0.cpp  BezierC2.cpp  InterpolatedC2.cpp  Point.cpp  Point.h  PointRef.cpp  PointRef.h
cpp/Serializer/Serializer/Models/Surfaces/: BezierPatch.h  BezierPatchC2.cpp  BezierSurfaceC2.cpp
cpp/Serializer/Serializer/Resources/: Schema.h
cpp/Serializer/Serializer/Scene/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
